Add geometry drag controls
